# JAXAtari_Centipede

./: .gitignore  .readthedocs.yaml  BaseGame.py  CONTRIBUTING.md  JAXAtari_Poster.pptx  LICENSE  OCAtari_Jax_comparison_graph.py  PongBasic.py  README.md  __init__.py  atraJaxis.py  compare_games.py  environment.py  games_covered.md  graph_generator.py  jax_breakout.py  jax_freeway.py  jax_game.py  jax_kangaroo.py  jax_pong.py  jax_seaquest.py  jax_singular_test.py  jax_skiing.py  jax_tennis.py  jax_tennis_test  jaxpong.py  kangaroo_levels.py  main.py  numbers_impl.py  pure_jax_pong.py  pyproject.toml  renovate.json  requirements.txt  seaquest.md  setup.py  tennis.md  tennis_defunct.py  train_agents.md
.github/workflows/: on-master-merge.yml  on-pr-full-ci-label.yml  on-pull-request-default.yml  on-pull-request-fork.yml  on-pull-request.yml  on-push-dev.yml  pr-tests.yml  renovate.yml  reusable-run-tests.yml  test-api.yml
atraJaxis/: README.md  canvas.py  gameObject.py  game_engine.py  hud.py  layer.py  renderMode.py  sprite.py  spriteLoader.py  test.py
atraJaxis/test_frames/: 3.npy
atraJaxis_defunct/: README.md  canvas.py  gameObject.py  hud.py  layer.py  renderMode.py  sprite.py  spriteLoader.py  test.py
benchmarks/: OCAtari_Jax_comparison_graph.py  fullcapacity_visualisation.py  jax_singular_test.py
boxing/: main.py
boxing/sprites/: background.piskel
ci/: Dockerfile
docs/: README.md  testing-lanes.md
docs/source/: conf.py  index.rst  requirements.txt
frames_boxings/: frame_1.npy  frame_11.npy  frame_12.npy  frame_14.npy  frame_15.npy  frame_18.npy  frame_3.npy  frame_5.npy  frame_7.npy  frame_8.npy  frame_9.npy
frames_numpy/: death_1.npy  death_2.npy  death_3.npy  death_4.npy  death_7.npy  frame_1.npy  frame_10.npy  frame_11.npy  frame_12.npy  frame_13.npy  frame_14.npy  frame_2.npy  frame_3.npy  frame_4.npy  frame_5.npy  frame_6.npy  frame_7.npy  frame_8.npy  frame_9.npy
frames_numpy/bg/: frame_5.npy  (+1 more)
frames_seaquest/: diver_example.npy  frame_18.npy  frame_6.npy  frame_7.npy  frame_9.npy  mov_2.npy
frames_tennis/: 2.npy  3.npy  f.npy  frame_1.npy  frame_10.npy  frame_11.npy  frame_13.npy  frame_14.npy  frame_15.npy  frame_2.npy  frame_3.npy  frame_4.npy  frame_5.npy  frame_6.npy  frame_7.npy  frame_8.npy  frame_9.npy
jaxtari/: __init__.py  core.py  environment.py
screenshots/: frame_1.npy  frame_2.npy  frame_3.npy  frame_4.npy  frame_5.npy  frame_6.npy  frame_7.npy
scripts/: ALE_RAMStateDeltas.py  RAMStateDeltas.py  README.md  compare_renders.py  create_custom_sprites.py  create_visual_comparison_svg.py  frame_extractor.py  gameplay_comparison.py  generate_gif.py  generate_svg.py  generate_test_report.py  get_objects_patches.py  list_mods.py  make_transparent.py  play.py  trajectory_regression.py  utils.py
spriteEditor/: README.md  RGBAColorChooser.py  spriteEditor.py
testRun/: runBoxing.py  runSeaQuest.py  runTennis.py
tests/: conftest.py  test_all_games.py  test_all_mods.py  test_core_and_wrappers.py  test_environment_compatibility.py  test_funcenv_adapter.py  test_regression.py  test_spaces.py
(+3036 files in other folders)
