[project]
name = "jaxatari"
version = "0.1.0"
description = "GPU-accelerated, object-centric Atari environments for reinforcement learning with JAX."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "absl-py==2.1.0",
    "chex==0.1.87",
    "jax==0.4.35",
    "jaxlib==0.4.35",
    "ml-dtypes==0.5.0",
    "numpy==2.1.3",
    "opt-einsum==3.4.0",
    "scipy==1.14.1",
    "toolz==1.0.0",
    "typing-extensions==4.12.2",
    "gymnax==0.0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
