[project]
name = "jaxatari"
version = "0.1.0"
description = "GPU-accelerated, object-centric Atari environments for reinforcement learning with JAX."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "absl-py>=2.3",
    "ale-py>=0.11.1",
    "chex>=0.1.87",
    "flax",
    "gymnasium>=1.2.0",
    "gymnax>=0.0.8",
    "jax",
    "ml-dtypes",
    "numpy",
    "opt-einsum>=3.4.0",
    "platformdirs>=4.5.1",
    "requests>=2.32.5",
    "scipy>=1.15.3",
    "toolz>=1.0.0",
    "typing-extensions>=4.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
install-sprites = "jaxatari.install_sprites:download_and_extract"

[project.optional-dependencies]
dev = [
  "pytest",
  "pygame==2.5.0",
  "gymnasium[other]==1.2.0",
  "syrupy==4.9.1",
]
gh_ci = [
  "pygame==2.5.0",
  "opencv-python-headless",
  "pytest",
  "pytest-sugar",
  "pytest-xdist",
  "pytest-github-actions-annotate-failures",
  "syrupy==4.9.1",
]
training = [
  "tyro",
  "torch",
  "tensorboard",
  "rtpt>=0.0.4",
  "wandb[media]>=0.24.0",
  "hydra-core>=1.3.2",
  "omegaconf>=2.3.0",
  "safetensors>=0.7.0",
]

[tool.pytest.ini_options]
markers = [
  "requires_snapshot: marks tests that rely on snapshot artifacts",
  "smoke: fast checks for PR validation",
  "integration: broader integration checks",
  "slow: expensive checks for exhaustive validation",
  "wrapper_full: tests that should run with the full wrapper recipe matrix",
  "serial: tests that must run without xdist parallel workers",
]
